Теперь разработчик может удалить приложение

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,43 +23,28 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 15:18:44] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:18:45] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:07] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:07] \"\u001b[37mGET /secretKey?link_id=608d473b676f6a78d657335b HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:08] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:35] \"\u001b[37mGET /getApp?id=608d46b5676f6a78d6573352 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:39] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:42] \"\u001b[37mGET /adminApp?id=608d46b5676f6a78d6573352 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:47] \"\u001b[32mPOST /adminDelete HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:47] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:19:58] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:03] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:07] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:14] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:14] \"\u001b[37mGET /secretKey?link_id=608d477e676f6a78d6573368 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:15] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:16] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:18] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:18] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:20] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:57] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:59] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:20:59] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:21:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:21:02] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:21:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:21:19] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:22:42] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:22:52] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:22:53] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:23:02] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:25:11] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:28:02] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:29:43] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:32:35] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 15:41:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:45] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:47] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:48] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:50] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:50] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:52] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:57] \"\u001b[32mPOST /devDelete HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:58] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:41:59] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:00] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:01] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:14] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:14] \"\u001b[37mGET /secretKey?link_id=608d4ca6676f6a78d6573389 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:16] \"\u001b[37mGET /getApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:18] \"\u001b[37mGET /devApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:23] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:23] \"\u001b[37mGET /secretKey?link_id=608d4caf676f6a78d657338e HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:24] \"\u001b[37mGET /getApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:25] \"\u001b[37mGET /devApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:30] \"\u001b[32mPOST /devDelete HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 15:42:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -251,7 +236,6 @@
     "\n",
     "@app.route(\"/devNewKey\",methods=[\"POST\"])\n",
     "def devNewKey():\n",
-    "    #print(request.form)\n",
     "    appID=request.form.get('appID', \"\")\n",
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
@@ -269,6 +253,24 @@
     "                       }})\n",
     "    link=db.links.insert_one({\"appID\":ObjectId(appObject[\"_id\"])})\n",
     "    return redirect(f\"/secretKey?link_id={link.inserted_id}\")\n",
+    "\n",
+    "@app.route(\"/devDelete\",methods=[\"POST\"])\n",
+    "def devDelete():\n",
+    "    appID=request.form.get('appID', \"\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    salt=appObject[\"salt\"]\n",
+    "    dbHash=appObject[\"passwordHash\"]\n",
+    "    formHash=sha256((salt+request.form.get('devPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    if dbHash != formHash:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    db.apps.delete_one({\"_id\":ObjectId(appID)})\n",
+    "    return redirect(\"/\")\n",
+    "\n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
    ]
   },
