--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -23,28 +23,27 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 15:41:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:45] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:47] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:48] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:50] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:50] \"\u001b[37mGET /getApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:52] \"\u001b[37mGET /devApp?id=608d473b676f6a78d657335a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:57] \"\u001b[32mPOST /devDelete HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:58] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:41:59] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:00] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:01] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:14] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:14] \"\u001b[37mGET /secretKey?link_id=608d4ca6676f6a78d6573389 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:16] \"\u001b[37mGET /getApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:18] \"\u001b[37mGET /devApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:23] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:23] \"\u001b[37mGET /secretKey?link_id=608d4caf676f6a78d657338e HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:24] \"\u001b[37mGET /getApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:25] \"\u001b[37mGET /devApp?id=608d4ca6676f6a78d6573388 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:30] \"\u001b[32mPOST /devDelete HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 15:42:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 16:00:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:00:31] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:00] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:01] \"\u001b[37mGET /secretKey?link_id=608d510c74d512567905bb20 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:02] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:04] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:12] \"\u001b[32mPOST /devChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:12] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:14] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:19] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:19] \"\u001b[37mGET /secretKey?link_id=608d511f74d512567905bb29 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:21] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:22] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:26] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:26] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:27] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:28] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:30] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:40] \"\u001b[32mPOST /devChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:41] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:01:42] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -109,6 +108,10 @@
     "@app.route(\"/createSave\",methods=['POST'])\n",
     "def createSave():\n",
     "    if request.form.get('name', \"\")==\"\":\n",
+    "        return redirect(\"/createError\")\n",
+    "    if request.form.get('email', \"\")==\"\":\n",
+    "        return redirect(\"/createError\")\n",
+    "    if request.form.get('devName', \"\")==\"\":\n",
     "        return redirect(\"/createError\")\n",
     "    if len(request.form.get('appPassword', \"\"))<10:\n",
     "        return redirect(\"/createError\")\n",
@@ -271,6 +274,32 @@
     "    db.apps.delete_one({\"_id\":ObjectId(appID)})\n",
     "    return redirect(\"/\")\n",
     "\n",
+    "@app.route(\"/devChangePassword\",methods=[\"POST\"])\n",
+    "def devChangePassword():\n",
+    "    if len(request.form.get('newPassword', \"\"))<10:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    appID=request.form.get('appID', \"\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    salt=appObject[\"salt\"]\n",
+    "    dbHash=appObject[\"passwordHash\"]\n",
+    "    formHash=sha256((salt+request.form.get('devPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    if dbHash != formHash:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    salt=''.join(random.choices(string.ascii_letters + string.digits, k=10))\n",
+    "    passwordHash=sha256((salt+request.form.get('newPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "                       {'$set': \n",
+    "                       {\n",
+    "                           \"passwordHash\":passwordHash,\n",
+    "                           \"salt\":salt,\n",
+    "                       }})\n",
+    "    return redirect(f\"/getApp?id={appID}\")\n",
+    "                        \n",
+    "                        \n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
    ]
   },
