Администратор теперь может менять пароль разработчика

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -8,42 +8,16 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/May/2021 16:00:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:00:31] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:00] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:01] \"\u001b[37mGET /secretKey?link_id=608d510c74d512567905bb20 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:02] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:04] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:12] \"\u001b[32mPOST /devChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:12] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:14] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:19] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:19] \"\u001b[37mGET /secretKey?link_id=608d511f74d512567905bb29 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:21] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:22] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:26] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:26] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:27] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:28] \"\u001b[37mGET /getApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:30] \"\u001b[37mGET /devApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:40] \"\u001b[32mPOST /devChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:41] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:01:42] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 16:11:56] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:11:57] \"\u001b[37mGET /adminApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:12:04] \"\u001b[32mPOST /adminChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:12:05] \"\u001b[37mGET /adminApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:12:10] \"\u001b[32mPOST /adminChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:12:10] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:12:11] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -298,6 +272,28 @@
     "                           \"salt\":salt,\n",
     "                       }})\n",
     "    return redirect(f\"/getApp?id={appID}\")\n",
+    "\n",
+    "@app.route(\"/adminChangePassword\",methods=[\"POST\"])\n",
+    "def adminChangePassword():\n",
+    "    if len(request.form.get('newPassword', \"\"))<10:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    appID=request.form.get('appID', \"\")\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
+    "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
+    "        return redirect(\"/saveError\")\n",
+    "    salt=''.join(random.choices(string.ascii_letters + string.digits, k=10))\n",
+    "    passwordHash=sha256((salt+request.form.get('newPassword', \"\")).encode('utf-8')).hexdigest()\n",
+    "    client = MongoClient(port=DATABASE_PORT)\n",
+    "    db=client.srp\n",
+    "    db.apps.update_one({\"_id\":ObjectId(appID)},\n",
+    "                       {'$set': \n",
+    "                       {\n",
+    "                           \"passwordHash\":passwordHash,\n",
+    "                           \"salt\":salt,\n",
+    "                       }})\n",
+    "    return redirect(f\"/adminApp?id={appID}\")\n",
     "                        \n",
     "                        \n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
