--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -8,16 +8,27 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [01/May/2021 16:11:56] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:11:57] \"\u001b[37mGET /adminApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:12:04] \"\u001b[32mPOST /adminChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:12:05] \"\u001b[37mGET /adminApp?id=608d510c74d512567905bb1f HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:12:10] \"\u001b[32mPOST /adminChangePassword HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [01/May/2021 16:12:10] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:12:11] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [01/May/2021 16:18:52] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:18:55] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:02] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:02] \"\u001b[37mGET /secretKey?link_id=608d55465786bd50bed6cb12 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:04] \"\u001b[37mGET /getApp?id=608d55465786bd50bed6cb11 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:07] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -41,6 +52,7 @@
     "from os.path import isfile, join\n",
     "import os\n",
     "from pymongo import MongoClient\n",
+    "import pymongo\n",
     "import os.path\n",
     "\n",
     "if os.path.isfile('.ADMIN_PASSWORD'):\n",
@@ -120,7 +132,7 @@
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    apps=list()\n",
-    "    for i in db.apps.find({}):\n",
+    "    for i in db.apps.find({}).sort(\"date\",pymongo.DESCENDING):\n",
     "        t=i\n",
     "        m=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
     "        status=\"off\"\n",
@@ -139,7 +151,7 @@
     "    client = MongoClient(port=DATABASE_PORT)\n",
     "    db=client.srp\n",
     "    apps=list()\n",
-    "    for i in db.apps.find({}):\n",
+    "    for i in db.apps.find({}).sort(\"date\",pymongo.DESCENDING):\n",
     "        t=i\n",
     "        m=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
     "        status=\"off\"\n",
