Добавлена валидация полей форм

--- a/Portal SRP.ipynb
+++ b/Portal SRP.ipynb
@@ -28,7 +28,19 @@
       "127.0.0.1 - - [01/May/2021 16:19:02] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
       "127.0.0.1 - - [01/May/2021 16:19:02] \"\u001b[37mGET /secretKey?link_id=608d55465786bd50bed6cb12 HTTP/1.1\u001b[0m\" 200 -\n",
       "127.0.0.1 - - [01/May/2021 16:19:04] \"\u001b[37mGET /getApp?id=608d55465786bd50bed6cb11 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:19:07] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 16:19:07] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:54] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:54] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:19:57] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:20:54] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:20:55] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:20:55] \"\u001b[37mGET /createError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:22:18] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:22:45] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:23:17] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:23:17] \"\u001b[37mGET /createError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:23:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:23:20] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
