Все файлы портала перемещены в отдельную папку

--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -40,7 +40,27 @@
       "127.0.0.1 - - [01/May/2021 16:23:17] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
       "127.0.0.1 - - [01/May/2021 16:23:17] \"\u001b[37mGET /createError HTTP/1.1\u001b[0m\" 200 -\n",
       "127.0.0.1 - - [01/May/2021 16:23:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [01/May/2021 16:23:20] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [01/May/2021 16:23:20] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:37] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:38] \"\u001b[37mGET /getApp?id=608d55465786bd50bed6cb11 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:40] \"\u001b[37mGET /devApp?id=608d55465786bd50bed6cb11 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:46] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:50] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:50] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:26:51] \"\u001b[37mGET /adminApp?id=608d5412663cebf809d6098a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:27:42] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:27:45] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:00] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:01] \"\u001b[37mGET /secretKey?link_id=608d57605786bd50bed6cb24 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:02] \"\u001b[37mGET /getApp?id=608d57605786bd50bed6cb23 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:03] \"\u001b[37mGET /devApp?id=608d57605786bd50bed6cb23 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:11] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:11] \"\u001b[37mGET /secretKey?link_id=608d576b5786bd50bed6cb29 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:12] \"\u001b[37mGET /getApp?id=608d57605786bd50bed6cb23 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:15] \"\u001b[37mGET /devApp?id=608d57605786bd50bed6cb23 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:18] \"\u001b[32mPOST /devNewKey HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:19] \"\u001b[37mGET /saveError HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [01/May/2021 16:28:20] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -81,10 +101,6 @@
     "\n",
     "@app.after_request\n",
     "def add_header(r):\n",
-    "    \"\"\"\n",
-    "    Add headers to both force latest IE rendering engine or Chrome Frame,\n",
-    "    and also to cache the rendered page for 10 minutes.\n",
-    "    \"\"\"\n",
     "    r.headers[\"Cache-Control\"] = \"no-cache, no-store, must-revalidate\"\n",
     "    r.headers[\"Pragma\"] = \"no-cache\"\n",
     "    r.headers[\"Expires\"] = \"0\"\n",
@@ -536,6 +552,55 @@
     "with open('.ADMIN_PASSWORD','r') as f:\n",
     "    ADMIN_PASSWORD = f.read()\n",
     "ADMIN_PASSWORD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dby5VeKFOslq-CbLqkmnP_yQaHHPs6983wAm7hAKJAw'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from base64 import b64encode\n",
+    "from collections import OrderedDict\n",
+    "from hashlib import sha256\n",
+    "from hmac import HMAC\n",
+    "from urllib.parse import urlparse, parse_qsl, urlencode\n",
+    "d = {\"b\":1,\"a\":4}\n",
+    "\n",
+    "od=OrderedDict(sorted(d.items(), key=lambda x: x))\n",
+    "hash_code =b64encode(HMAC(\"0c863557e6e6cfe5b859d19f83b6add9c42bfe9fc1d696f36dd00da7bb523a59\".encode(), urlencode(od, doseq=True).encode(), sha256).digest())\n",
+    "hash_code.decode('utf-8')[:-1].replace('+', '-').replace('/', '_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"b'Dby5VeKFOslq+CbLqkmnP/yQaHHPs6983wAm7hAKJAw='\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(s)"
    ]
   }
  ],
