--- a/Client SRP/Client SRP.ipynb
+++ b/Client SRP/Client SRP.ipynb
@@ -563,22 +563,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e0918c02a6b82cfa0f1cc713e595a56cdc38167e00c53c7386833dff2b757b49'"
+       "'46cfa8597aadeec32eaa59f32d17e6505dfdcc855d34d8db734600f3c58b7903'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_sha256('{\"path\":\"a\\\\b\"}')"
+    "my_sha256(json.dumps({\"path\":\"a\\\\b\"},separators=(',', ':')))\n",
+    "#sha256(JSON.stringify({\"path\":\"a\\\\b\"}))"
    ]
   }
  ],
