Добавлено поле адреса приложения

--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -21,285 +21,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49052/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 00:57:12] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 14:11:01] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': 'baabb9f7c711a9fa68a9f9899b5e27b96f29abab687b1f228cc1cb20a18f9560', 'serverSign': 'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='}\n",
-      "b'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 00:57:36] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'delete', 'commandHash': 'c7174cbc348ebc05e2e7fe246b9584d2b5d93dca7241c8e92f025ee5b2743090', 'serverSign': '8BhkpHrMv5dFuuzbBCNVKXM7mKaxCI9WB0fYZPukUH8='}\n",
-      "b'8BhkpHrMv5dFuuzbBCNVKXM7mKaxCI9WB0fYZPukUH8='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:05:48] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'delete', 'commandHash': 'c7174cbc348ebc05e2e7fe246b9584d2b5d93dca7241c8e92f025ee5b2743090', 'serverSign': '8BhkpHrMv5dFuuzbBCNVKXM7mKaxCI9WB0fYZPukUH8='}\n",
-      "b'8BhkpHrMv5dFuuzbBCNVKXM7mKaxCI9WB0fYZPukUH8='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:05:55] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': 'baabb9f7c711a9fa68a9f9899b5e27b96f29abab687b1f228cc1cb20a18f9560', 'serverSign': 'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='}\n",
-      "b'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:11:37] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': 'baabb9f7c711a9fa68a9f9899b5e27b96f29abab687b1f228cc1cb20a18f9560', 'serverSign': 'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='}\n",
-      "b'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:13:21] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': 'baabb9f7c711a9fa68a9f9899b5e27b96f29abab687b1f228cc1cb20a18f9560', 'serverSign': 'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='}\n",
-      "b'Ad/tTn0cLI/rGz+z6p0CUyG/wUcTr/m18fV6C0nYP74='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:17:40] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': 'deffdc22eb39dcb740ea5771244a628423f2c99e38b90f5bd6664d12bff242f2', 'serverSign': 'GoZdSYZEiWggRKfVl74EPklrFWNLvD3QboNKvD9ik5s='}\n",
-      "b'GoZdSYZEiWggRKfVl74EPklrFWNLvD3QboNKvD9ik5s='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:25:07] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': 'cf64df4f20464549694696b5b612abf853c45596e87fa34ecf95516568f6c582', 'serverSign': '5wG94iaXod1BnONfjEsCOzrpfJQj/sugcGpP7YY8dYI='}\n",
-      "b'75zwb05fFZKsRY6BmMEsDbF+3WaMS7GiNrZFS2kQruc='\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:37:35] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:39:34] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:41:09] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:41:48] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:43:32] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:44:15] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:44:55] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:53:41] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:57:06] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
-      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
-      "['read', 'write']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 01:58:07] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
       "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
       "['read', 'write']\n"
      ]
@@ -355,7 +84,8 @@
     "    print(t)\n",
     "    tSign=b64encode(HMAC(appObject[\"secretKey\"].encode(), t[\"commandHash\"].encode(), sha256).digest())\n",
     "    print(tSign)\n",
-    "    #response=dict()\n",
+    "    if t[\"appURL\"]!=appObject[\"appSite\"]:\n",
+    "        return \"False\"\n",
     "    if tSign.decode(\"utf-8\")==t[\"serverSign\"]:\n",
     "        allowedCommands=list()\n",
     "        for i in [\"spisok\",\"read\",\"write\",\"delete\"]:\n",
@@ -367,6 +97,27 @@
     "        return \"False\"\n",
     "\n",
     "app.run(host=SERVER_HOST, port=SERVER_PORT, threaded=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParseResult(scheme='http', netloc='localhost:49054', path='/', params='', query='', fragment='')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from urllib.parse import urlparse\n",
+    "urlparse(\"http://localhost:49054/\")"
    ]
   },
   {
